Fixed layout for valign middle checkbox for list view

--- a/src/list.scss
+++ b/src/list.scss
@@ -11,7 +11,7 @@ ul.ddl_fc > li {
 }
 
 ul.ddl_sc > li {
-	display: block;
+	display: table;
 }
 
 ul.ddl_fc .ddl_li_m {
@@ -21,11 +21,16 @@ ul.ddl_fc .ddl_li_m {
 
 ul.ddl_sc .ddl_li_m {
 	vertical-align: middle;
-	float: left
+	display: table-cell;
 }
 
 [dir='rtl'] ul.ddl_sc .ddl_li_m {
 	float: right;
+}
+
+ul.ddl_sc a.ddl_li_c{
+	display: table-cell;
+	width: 100%;
 }
 
 ul.ddl_fc a.ddl_li_c {
